--- a/docker/data-generator/docker-compose.yml
+++ b/docker/data-generator/docker-compose.yml
@@ -17,7 +17,7 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_CREATE_TOPICS: "kafka:1:1"
   data-generator:
-    image: data-generator:demo
+    image: kafka-data-generator:demo
     build: .
     depends_on:
       - kafka
