--- a/table/pom.xml
+++ b/table/pom.xml
@@ -151,7 +151,7 @@
                             </filters>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.apache.flink.playgrounds.spendreport.SpendReport</mainClass>
+                                    <mainClass>org.apache.flink.playgrounds.structuredata.DataReport</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
