👌 Improve: data generator skip java test

--- a/docker/data-generator/Dockerfile
+++ b/docker/data-generator/Dockerfile
@@ -5,7 +5,7 @@ COPY ./src /opt/data-producer/src
 COPY ./pom.xml /opt/data-producer/pom.xml
 
 RUN cd /opt/data-producer; \
-    mvn clean install -Drat.skip=true -DskipTest
+    mvn clean install -Drat.skip=true -DskipTests
 
 FROM openjdk:8-jre
 
