--- a/docker/data-generator/pom.xml
+++ b/docker/data-generator/pom.xml
@@ -193,6 +193,7 @@ under the License.
                         <phase>verify</phase>
                         <goals>
                             <goal>check</goal>
+                            <goal>apply</goal>
                         </goals>
                     </execution>
                 </executions>
