--- a/docker/data-generator/pom.xml
+++ b/docker/data-generator/pom.xml
@@ -74,7 +74,7 @@ under the License.
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.4.5</version>
-<!--            <scope>test</scope>-->
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
