--- a/table/docker-compose.yml
+++ b/table/docker-compose.yml
@@ -45,6 +45,16 @@ services:
       - jobmanager:jobmanager
     environment:
       - JOB_MANAGER_RPC_ADDRESS=jobmanager
+  sql-client:
+    image: flink:latest
+    command: wget -P /opt/flink/lib https://repo.maven.apache.org/maven2/org/apache/flink/flink-sql-connector-kafka/1.16.0/flink-sql-connector-kafka-1.16.0.jar && bin/sql-client.sh
+    depends_on:
+      - jobmanager
+    environment:
+      - |
+        FLINK_PROPERTIES=
+        jobmanager.rpc.address: jobmanager
+        rest.address: jobmanager
   zookeeper:
     image: wurstmeister/zookeeper:3.4.6
     ports:
